cabal-version:      3.0
name:               haskell
version:            0.1.0.0


build-type:         Simple

common warnings
    ghc-options: -Wall

executable hello-world
  hs-source-dirs:      examples
  main-is:             hello_world.hs
  build-depends:       base ^>=4.18.3.0
  default-language:    Haskell2010
